--- a/materi-avip/myapp/jsconfig.json
+++ b/materi-avip/myapp/jsconfig.json
@@ -1,8 +1,15 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/App-backup.vue",
+    "src/App-original.vue"
+  ]
 }
